feat(gi): complete dynamic G6 integration